--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
       <div class="nav__logo">Silent Shores<span>.</span></div>
       <ul class="nav__links">
-        <li class="link"><a href="#">Home</a></li>
+        <li class="link"><a href="index.html">Home</a></li>
         <li class="link"><a href="#">Destinations</a></li>
         <li class="link"><a href="#">Pricing</a></li>
         <li class="link"><a href="#">Reviews</a></li>
@@ -89,12 +89,7 @@
             <p class="destination__subtitle">Jammu & Kashmir</p>
           </div>
         </div>
-        <div class="destination__card">
-          <img src="img/pexels-alex-azabache-3214958.jpg" alt="destination" />
-          <div class="destination__details">
-            <p class="destination__title">Wadi Musa</p>
-            <p class="destination__subtitle">Jordan</p>
-          </div>
+        
         </div>
       </div>
     </section>
