--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
       <div class="section__container header__container">
         <div class="header__image">
-          <img src="https://github.com/asifayoubdar/silent-shores/blob/main/img/Banner.jpg" alt="header" />
+          <img src="img/Banner.jpg" alt="header" />
           <img src="img/package2.jpg" alt="header" />
         </div>
         <div class="header__content">
