--- a/contact.html
+++ b/contact.html
@@ -28,22 +28,18 @@
       <li>Phone: +91 7889824280</li>
       <li>Address: Mandloo Complex , Model Town "D" Sopore, Baramulla</li>
     </ul>
-    <form class="contact-form">
-      <h3>Send us a Message</h3>
-      <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+    <div class="footer__col">
+          <h4>Address</h4>
+          <p>
+            <span>Address:</span> Model Town-D Sopore, Jammu & Kashmir 
+          </p>
+          <p><span>Email:</span> Silentshores@gmail.com</p>
+          <p><span>Phone:</span> +91 7889824280</p>
+        </div>
       </div>
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+      <div class="footer__bar">
+        Copyright © 2023 Silent Shores. All rights reserved.
       </div>
-      <div class="form-group">
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" required></textarea>
-      </div>
-      <button type="submit" class="btn">Submit</button>
-    </form>
   </section>
 
   <footer>
