--- a/contact.html
+++ b/contact.html
@@ -23,17 +23,12 @@
   <section class="contact-section">
     <h2>Contact Us</h2>
     <p>For any inquiries or assistance, please feel free to contact us using the information below:</p>
-    <ul>
-      <li>Email: Silentshores@gmail.com</li>
-      <li>Phone: +91 7889824280</li>
-      <li>Address: Mandloo Complex , Model Town "D" Sopore, Baramulla</li>
-    </ul>
-    <div class="footer__col">
+       <div class="footer__col">
           <h4>Address</h4>
           <p>
             <span>Address:</span> Model Town-D Sopore, Jammu & Kashmir 
           </p>
-          <p><span>Email:</span> Silentshores@gmail.com</p>
+          <p><span>Email:</span> Silentshores.info@gmail.com</p>
           <p><span>Phone:</span> +91 7889824280</p>
         </div>
       </div>
